@@ -114,6 +114,8 @@ Version 1.13.4+dev:
      built-in effects - for example, to add a new feature to
      [effect]apply_to=attack. It also now supports effect descriptions,
      for use by the [trait] tag.
+   * Additional fields in table returned by wesnoth.get_terrain_info:
+     * icon, editor_image, light
    * LuaAI:
      * The table returned by check_*() now has a "result" field which
        gives a description of the action's result; similar to "status"
